@@ -1,3 +1,7 @@
+2018-09-09  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* resort_items() of a selection list.
+
 2018-08-26  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* list.C: no_selection_type list option.
